Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42295

Qt WebEngine Browser ASSERTs on Linux when closing after viewing fishgl.com

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.0
    • 5.4.0 Beta
    • WebEngine
    • None
    • Ubuntu 14.04 64 Bit.

    Description

      When closing the (widgets) browser with the fishgl.com demo running, the application will run into an assert.

      Attachments

        1. quicknanobrowser_backtrace.txt
          7 kB
          Andras Becsi
        2. QTBUG-42295-bt.txt
          7 kB
          Michael Bruning
        For Gerrit Dashboard: QTBUG-42295
        # Subject Branch Project Status CR V

        Activity

          People

            abecsi Andras Becsi
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes