chromium/content/common/gpu/gpu_channel_manager.h
@@ -28,6 +28,7 @@ class WaitableEvent;
 }
 
 namespace gfx {
+class GLFence;
 class GLShareGroup;
 struct GpuMemoryBufferHandle;
 }
@@ -100,6 +101,8 @@ class GpuChannelManager : public IPC::Listener,
   GpuChannel* LookupChannel(int32 client_id);
 
   SyncPointManager* sync_point_manager() { return sync_point_manager_.get(); }
+  typedef base::hash_map<uint32, gfx::GLFence*> SyncPointGLFences;
+  SyncPointGLFences sync_point_gl_fences_;
 
   gfx::GLSurface* GetDefaultOffscreenSurface();
 
