chromium/ui/gl/gl_fence_egl.cc
@@ -21,6 +21,15 @@ GLFenceEGL::GLFenceEGL(bool flush) {
   }
 }
 
+TransferableFence GLFenceEGL::Transfer() {
+  gfx::TransferableFence ret;
+  ret.type = gfx::TransferableFence::EglSync;
+  ret.egl.display = display_;
+  ret.egl.sync = sync_;
+  sync_ = 0;
+  return ret;
+}
+
 bool GLFenceEGL::HasCompleted() {
   EGLint value = 0;
   if (eglGetSyncAttribKHR(display_, sync_, EGL_SYNC_STATUS_KHR, &value) !=
